2004-10-10  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/draw-context.cpp (spdc_endpoint_snap_handle):
	  Change argument type from SPDrawContext to SPPenContext, and
	  specialize definition accordingly.  Caller updated.

	* src/draw-context.h: Change red_curve_is_valid from char to bool.
	* src/draw-context.cpp: Change red_curve_is_valid assignments from
	  0x00/0x01 to false/true (using find & replace).

2004-10-07  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-object-repr.cpp (sp_repr_type_lookup): Distinguish between XML
	  element name and sodipodi:type attribute value: use a separate table
	  for each.
	* src/sp-object-repr.h, src/sp-object-repr.cpp (sp_object_type_lookup):
	  Don't export this function.  (Also rename it to name_to_gtype and
	  change its definition for separate tables.)

2004-10-03  Kees Cook  <kees@outflux.net>

	* src/dialogs/rdf.cpp, src/dialogs/repr-util.cpp, src/dialogs/repr.h:
	  Since "dc:title" can appear at multiple XML levels, a way to
	  control max depth in searching was added.  (Closes bug #1009290)

2004-09-30  MenTaLguY  <mental@rydia.net>

	* src/widgets/document-tree-model.cpp:
	  more bug fixes
	
	* src/widgets/layer-selector.cpp, src/widgets/layer-selector.h:
	  get the layer selector sort of in more order

2004-09-28  Ted Gould  <ted@gould.cx>

	* src/verbs.cpp, src/verbs.h, src/view.cpp:

	Making it so that actions get deleted as views get destroyed.

2004-09-27  Ted Gould  <ted@gould.cx>

	* src/desktop.h, src/forward.h, src/interface.cpp, src/interface.h,
	src/select-toolbar.cpp, src/shortcuts.cpp, src/shortcuts.h,
	src/toolbox.cpp, src/toolbox.h, src/verbs.cpp, src/verbs.h,
	src/dialogs/align.cpp, src/dialogs/align.h,
	src/dialogs/desktop-properties.cpp, src/dialogs/display-settings.cpp,
	src/dialogs/export.cpp, src/dialogs/find.cpp,
	src/dialogs/item-properties.cpp, src/dialogs/object-properties.cpp,
	src/dialogs/text-edit.cpp, src/dialogs/transformation.cpp,